--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,15 @@ body {
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot90 {
-	position: relative;
-display: inline-block;
-border: 1px dashed #000;
-padding: 10px;
-background: #ffffa2;
-height: 20px;
-opacity: 0.3;
-text-decoration: none;
+	/* Firefox */
+	-moz-transform:rotate(90deg);
+	/* WebKit */
+	-webkit-transform:rotate(90deg) ;
+	/* Opera */
+	-o-transform:rotate(90deg);
+	/* Standard */
+	transform: rotate(90deg);
+
 /* Firefox */
 -moz-transition: all 1s ease;
 /* WebKit */
@@ -115,15 +116,15 @@ Make it animate nicely. You'll need CSS3 for this*/
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot270 {
+	/* Firefox */
+	-moz-transform:rotate(270deg);
+	/* WebKit */
+	-webkit-transform:rotate(270deg) ;
+	/* Opera */
+	-o-transform:rotate(270deg);
+	/* Standard */
+	transform: rotate(270deg);
 
-		position: relative;
-	display: inline-block;
-	border: 1px dashed #000;
-	padding: 10px;
-	background: #ffffa2;
-	height: 20px;
-	opacity: 0.3;
-	text-decoration: none;
 	/* Firefox */
 	-moz-transition: all 1s ease;
 	/* WebKit */
